[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "congress-py"
version = "0.1.0"
description = "A lightweight Python SDK for interacting with the United States Congress API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Antonio Alaniz" }
]
dependencies = [
    "requests>=2.32.3,<3"
]

[project.optional-dependencies]
dev = [
    "codecov>=2.1.13,<3",
    "coverage>=7.6.4,<8",
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "requests-mock>=1.12.1,<2"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["congress_py*"]
