[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "congress-py"
version = "0.1.0"
description = "A lightweight Python SDK for interacting with the United States Congress API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Antonio Alaniz" }
]
keywords = ["congress", "api", "legislative", "government", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32.3,<3",
    "typer>=0.12.5,<1"
]

[project.urls]
Homepage = "https://github.com/talaniz/congress.py"
Documentation = "https://talaniz.github.io/congress.py/"
Repository = "https://github.com/talaniz/congress.py"
Issues = "https://github.com/talaniz/congress.py/issues"
Changelog = "https://github.com/talaniz/congress.py/blob/main/docs/changelog.md"

[project.optional-dependencies]
dev = [
    "codecov>=2.1.13,<3",
    "coverage>=7.6.4,<8",
    "pytest>=8.3.3,<9",
    "pytest-cov>=6.0.0,<7",
    "requests-mock>=1.12.1,<2"
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.5.49,<10",
    "mkdocstrings[python]>=0.27.1,<1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["congress_py*"]

[project.scripts]
congress = "congress_py.cli:run"
